[package]
name = "aoc19"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[features]
default = []
extras = []

[dependencies]
itertools = "0.8"
intcode = { path = "./intcode" }

[profile.dev]
codegen-units = 4
incremental = true
lto = false
opt-level = 1
panic = 'unwind'

[workspace]
members = ["intcode"]
